--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ body {
 }
 .slider__item {
   width: 21vw;
-  margin-bottom: calc(var(--index) * 2.6);
+  margin-bottom:25px;
   cursor: pointer;
   transition: var(--transition);
   box-shadow:rgb(0,0,0/.15) 0 0 20px 10px;
